# ntStat

./: .gitattributes  .gitignore  README.md  azure-pipelines.yaml  azure-pipelines.yml  environment.yaml  meson.build
src/: main.cpp  ntstat.py  timer.hpp  utils.hpp  version.hpp.in
src/count/: kmers.hpp  main.hpp  seeds.hpp
src/filter/: main.hpp
src/modules/count/: args.hpp  bf_utils.hpp  count.hpp  main.cpp  meson.build
src/modules/filter/: args.hpp  bf_utils.hpp  filter.hpp  main.cpp  meson.build  utils.hpp
src/modules/hist/: __init__.py  default.mplstyle  figures.py  hist.py  histogram.py  main.py  meson.build  model.py  output.py  paper.mplstyle  stdout.py  table_printer.py  thresholds.py  utils.py
src/modules/query/: meson.build  query.py
src/modules/rarity/: args.hpp  main.cpp  meson.build
src/subcommands/: count.hpp  filter.hpp  hist.hpp  query.hpp  rarity.hpp
tests/: test_count.py  test_filter.py  test_installation.py
tests/data/: get_counts.py  reads_k30.hist  reads_kmers.npz
