py.install_sources('__init__.py', subdir: 'ntstat/hist')
py.install_sources('figures.py', subdir: 'ntstat/hist')
py.install_sources('histogram.py', subdir: 'ntstat/hist')
py.install_sources('main.py', subdir: 'ntstat/hist')
py.install_sources('mixture_models.py', subdir: 'ntstat/hist')
py.install_sources('stdout.py', subdir: 'ntstat/hist')
py.install_sources('utils.py', subdir: 'ntstat/hist')