py.install_sources('__init__.py', subdir: 'ntstat/hist')
py.install_sources('histogram.py', subdir: 'ntstat/hist')
py.install_sources('main.py', subdir: 'ntstat/hist')
py.install_sources('model.py', subdir: 'ntstat/hist')
py.install_sources('output.py', subdir: 'ntstat/hist')
py.install_sources('utils.py', subdir: 'ntstat/hist')

py.install_sources('default.mplstyle', subdir: 'ntstat/hist')
py.install_sources('paper.mplstyle', subdir: 'ntstat/hist')